--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
         <div id="projects_section">
             <p class="black">ss</p>
+            <p class="black">ss</p>
             <h2>
                 PROJECTS
             </h2>
@@ -56,6 +57,7 @@
             </p>
         </div>
         <div id="FaQ_section">
+            <p class="black">ss</p>
             <p class="black">ss</p>
             <h2>
                 FAQ
@@ -87,3 +89,4 @@
     <script src="script.js"></script> 
 </body>
 </html>
+
