--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <p>
                 UmbraScript is a dynamic indie programming studio located in Poland. Specializing in Indie Games, our team is driven by a passion for pushing the boundaries of technology and creativity. With a focus on quality and ingenuity, we strive to deliver cutting-edge projects that cater to the diverse needs of our clients and users worldwide. At UmbraScript, we believe in the power of code to transform ideas into reality, and we are committed to building a brighter digital future, one line at a time. Join us on our journey as we continue to innovate, inspire, and make a difference in the world of programming.
             </p>
-            <p>Youtube: <a href="https://www.youtube.com/@UmbraScript">@UmbraScript</a></p>
-            <p>X: <a href="https://twitter.com/UmbraScript">@UmbraScript</a></p>
-            <p>TikTok: <a href="https://www.tiktok.com/@umbrascrpt">@UmbraScript</a></p>
+            <p>Youtube: <a href="https://www.youtube.com/@UmbraScript" target="_blank">@UmbraScript</a></p>
+            <p>X: <a href="https://twitter.com/UmbraScript" target="_blank">@UmbraScript</a></p>
+            <p>TikTok: <a href="https://www.tiktok.com/@umbrascrpt" target="_blank">@UmbraScript</a></p>
         </div>
         <div id="projects_section">
             <p class="black">ss</p>
