--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button id="home_button">Home</button>
             <button id="projects_button">Projects</button>
             <button id="FaQ_button">FaQ</button>
+            <button id="Login_button">Login</button>
         </div>
     </header>
     <main>
